cmake_minimum_required (VERSION 3.6)

if(PLATFORM_WIN32)
    add_subdirectory(Tutorial00_HelloWin32)
elseif(PLATFORM_LINUX)
    add_subdirectory(Tutorial00_HelloLinux)
endif()
add_subdirectory(Tutorial01_HelloTriangle)
add_subdirectory(Tutorial02_Cube)
add_subdirectory(Tutorial03_Texturing)
add_subdirectory(Tutorial03_Texturing-C)
add_subdirectory(Tutorial04_Instancing)
add_subdirectory(Tutorial05_TextureArray)
add_subdirectory(Tutorial06_Multithreading)
add_subdirectory(Tutorial07_GeometryShader)
add_subdirectory(Tutorial08_Tessellation)
add_subdirectory(Tutorial09_Quads)
add_subdirectory(Tutorial10_DataStreaming)
add_subdirectory(Tutorial11_ResourceUpdates)
add_subdirectory(Tutorial12_RenderTarget)
add_subdirectory(Tutorial13_ShadowMap)
add_subdirectory(Tutorial14_ComputeShader)
if(PLATFORM_WIN32)
    add_subdirectory(Tutorial15_MultipleWindows)
endif()
add_subdirectory(Tutorial16_BindlessResources)
add_subdirectory(Tutorial17_MSAA)
add_subdirectory(Tutorial18_Queries)
add_subdirectory(Tutorial19_RenderPasses)
add_subdirectory(Tutorial20_MeshShader)
